<resources>
    <string name="app_name" translatable="false">YtAlarm</string>
    <string name="version" translatable="false">v%s(%d)</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="thumbnail_description" translatable="false">PlaylistThumbnail</string>


    <string name="setting_enabled">Enabled</string>
    <string name="setting_time">Time</string>
    <string name="setting_repeat">Repeat</string>
    <string name="setting_playlist">Playlist</string>
    <string name="setting_playlist_empty">Select playlist</string>
    <string name="setting_loop">Loop</string>
    <string name="setting_shuffle">Shuffle</string>
    <string name="setting_volume">Volume</string>
    <string name="setting_snooze">Snooze</string>
    <plurals name="setting_snooze_time">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="setting_vibration">Vibration</string>
    <string name="item_video_list_state_importing">Importing</string>
    <string name="item_video_list_state_import_failed">Import Failed</string>
    <string name="fragment_video_player_button_dismiss">Dismiss</string>
    <string name="fragment_video_player_button_snooze">Snooze</string>
    <string name="fragment_video_player_button_stop">Stop</string>
    <string name="fragment_video_player_text_error">Failed to get Alarm data</string>
    <string name="fragment_video_player_content_description_playing">Now playing: %1$s</string>

    <string name="repeat_type_once">Once</string>
    <string name="repeat_type_everyday">Everyday</string>

    <string name="menu_item_aram_list">AramList</string>
    <string name="menu_title_playlist">PlayList</string>
    <string name="menu_title_video_list">VideoList</string>
    <string name="menu_title_aboutpage">About</string>

    <!-- Navigation titles for Compose screens -->
    <string name="nav_alarm_list">Alarms</string>
    <string name="nav_playlist">Playlists</string>
    <string name="nav_video_list">Videos</string>
    <string name="nav_video_list_all">All Videos</string>
    <string name="nav_video_list_new">New Playlist</string>

    <!-- Empty state messages -->
    <string name="alarm_list_empty_message">No alarms. Tap + to create one.</string>
    <string name="playlist_empty_message">No playlists. Tap + to create one.</string>
    <string name="video_list_empty_message">No videos. Tap + to add one.</string>
    <string name="video_list_empty_new_message">Add videos to create a new playlist.</string>

    <string name="dialog_video_input_url_hint" translatable="false">https://…</string>
    <string name="dialog_video_input_ok">Import</string>

    <string name="dialog_execute_progress_title">Importing…</string>
    <string name="dialog_execute_progress_title_loading">Loading…</string>
    <string name="dialog_execute_progress_eta_init">calculating…</string>

    <string name="dialog_multichoice_ok">Confirm</string>

    <string name="dialog_remove_title">Delete</string>
    <string name="dialog_remove_ok">Confirm</string>

    <!-- Remove video dialog -->
    <string name="dialog_remove_video_title">Delete Videos</string>
    <string name="dialog_remove_video_message">Are you sure you want to delete the selected videos?</string>
    <string name="button_delete">Delete</string>
    <string name="dialog_remove_video_negative">Cancel</string>

    <string name="dialog_repeat_choice_title">Repeat</string>
    <string-array name="dialog_repeat_type_choice">
        <item name="dialog_repeat_type_choice_once">Once</item>
        <item name="dialog_repeat_type_choice_everyday">EveryDay</item>
        <item name="dialog_repeat_type_choice_days">Days</item>
        <item name="dialog_repeat_type_choice_date">Date</item>
    </string-array>
    <string name="dialog_repeat_days_title">Days</string>
    <string name="dialog_repeat_days_ok">Confirm</string>
    <string name="dialog_shared_text_should_be_url_title">Error</string>
    <string name="dialog_shared_text_should_be_url_description">The shared text should start \"http..\"</string>
    <string name="dialog_shared_url_new_playlist">Create New Playlist</string>

    <string name="dialog_vibration_waring_title">Attention</string>
    <string name="dialog_vibration_waring_message">Vibration system may not work in Android12.</string>
    <string name="dialog_vibration_warning_show_issue">Open Issue</string>

    <string-array name="dialog_alarm_order">
        <item>Title</item>
        <item>Creation date</item>
        <item>Last updated</item>
    </string-array>

    <string-array name="dialog_playlist_order">
        <item>Title</item>
        <item>Creation date</item>
        <item>Last updated</item>
    </string-array>

    <string-array name="dialog_video_order">
        <item>Title</item>
        <item>Imported date</item>
    </string-array>

    <string name="snackbar_error_playlistid_is_null">Please select playlist</string>
    <string name="snackbar_error_target_is_the_past_date">Target is the past date</string>
    <string name="snackbar_error_failed_to_get_alarm">Failed to get alarm data</string>
    <string name="snackbar_error_failed_to_save_alarm">Failed to save alarm</string>
    <string name="snackbar_error_failed_to_get_video">Failed to get video data</string>
    <string name="snackbar_error_failed_to_import_video">Failed to import video</string>
    <string name="snackbar_error_failed_to_access_clipboard">Failed to access clipboard system.</string>
    <string name="snackbar_error_failed_to_access_settings_data">Failed to access settings data.</string>
    <string name="snackbar_error_empty_video">Video is Empty</string>
    <string name="snackbar_sync_started">Sync started</string>
    <string name="snackbar_detect_playlist_usage">Some playlists are used by alarms.</string>
    <string name="snackbar_copied">Copied</string>
    <string name="snackbar_error_no_alarm_permission">Cannot schedule exact alarms. Please grant permission in settings.</string>

    <string name="snackbar_error_failed_to_schedule_alarm">Failed to schedule alarm</string>
    <string name="error_no_alarm_manager">Alarm service is not available</string>
    <string name="error_invalid_alarm_id">Invalid alarm ID</string>

    <string name="notification_channel_name" translatable="false">YtAlarm</string>
    <string name="notification_snooze_channel_description" translatable="false">Snooze notification channel</string>
    <string name="notification_snooze_title">Snooze Enabled</string>
    <plurals name="notification_snooze_remain">
        <item quantity="one">Alarm will start after %d minute</item>
        <item quantity="other">Alarm will start after %d minutes</item>
    </plurals>
    <string name="notification_snooze_remain_soon">Alarm will start soon</string>
    <string name="notification_download_video_info_channel_description" translatable="false">Video Information download channel</string>
    <string name="notification_download_video_info_title">Downloading Video Information…</string>
    <string name="notification_download_video_file_channel_description" translatable="false">Video File download channel</string>
    <string name="notification_download_video_file_title">Downloading Video…</string>
    <string name="menu_playlist_option_rename">Rename</string>
    <string name="menu_playlist_option_delete">Delete</string>
    <string name="dialog_delete_playlist_title">Delete Playlist</string>
    <string name="dialog_delete_playlist_message">Delete \"%1$s\"?</string>
    <string name="message_playlist_deleted">Playlist deleted</string>
    <string name="error_delete_playlist_failed">Failed to delete playlist</string>

    <string name="dialog_delete_alarm_title">Delete Alarm</string>
    <string name="dialog_delete_alarm_message">Delete alarm at %1$02d:%2$02d?</string>
    <string name="message_alarm_deleted">Alarm deleted</string>
    <string name="error_delete_alarm_failed">Failed to delete alarm</string>

    <string name="menu_alarm_option_sortrule">Sort Alarms</string>
    <string name="menu_playlist_option_sortrule">Sort Playlists</string>
    <string name="menu_video_list_option_sortrule">Sort Videos</string>

    <string name="menu_video_list_item_option_set_thumbnail">Set as playlist thumbnail</string>
    <string name="menu_video_list_item_option_download">Download</string>
    <string name="menu_video_list_item_option_reimport">Reimport</string>
    <string name="menu_video_list_item_option_delete">Delete</string>

    <string name="menu_video_list_option_sync_rule">Sync Rule</string>
    <string-array name="dialog_video_list_syncrule">
        <item>Always add</item>
        <item>Delete if not exist</item>
    </string-array>

    <string name="item_aboutpage_title_github" translatable="false">GitHub</string>
    <string name="item_aboutpage_details_github">Open and get the YtAlarm source code.</string>
    <string name="item_aboutpage_title_license">License</string>
    <string name="item_aboutpage_details_license">YtAlarm licensed under GNU General Public License v3.0.</string>
    <string name="item_aboutpage_title_tirdpartylicenses">Third-party Licenses</string>
    <string name="item_aboutpage_liberapay_title" translatable="false">Liberapay</string>
    <string name="item_aboutpage_liberapay_details">Click to open</string>
    <string name="item_aboutpage_ethereum_title" translatable="false">Ethereum</string>
    <string name="item_aboutpage_ethereum_address" translatable="false">0xcE7772EcFc76354c688AE9Ba14470791C8AF6555</string>

    <!-- Dialog strings for menu actions -->
    <string name="dialog_reimport_title">Reimport Video</string>
    <string name="dialog_reimport_message">Update information for \"%1$s\"?</string>
    <string name="dialog_reimport_confirm">Update</string>
    <string name="dialog_delete_video_title">Delete Video</string>
    <string name="dialog_delete_video_message">Delete \"%1$s\"?</string>
    <string name="dialog_remove_or_delete_video_title">Remove or Delete Video</string>
    <string name="dialog_remove_or_delete_video_message">What would you like to do with \"%1$s\"?</string>
    <string name="dialog_remove_or_delete_video_remove">Remove from playlist</string>
    <string name="dialog_remove_or_delete_video_delete">Delete video</string>

    <!-- Form labels -->
    <string name="playlist_name_label">Playlist Name</string>
    <string name="error_empty_name">Please enter a name</string>

    <!-- Snackbar messages -->
    <string name="message_thumbnail_set">Thumbnail has been set</string>
    <string name="message_video_deleted">Video deleted</string>
    <string name="message_video_removed_from_playlist">Removed from playlist</string>
    <string name="message_reimport_started">Updating video information…</string>
    <string name="message_reimport_success">Video information updated successfully</string>
    <string name="message_reimport_failed">Failed to update video information</string>
    <string name="message_reimport_error_parse">Failed to update: Parse error</string>
    <string name="message_reimport_error_network">Failed to update: Network error</string>
    <string name="message_playlist_renamed">Playlist renamed</string>
    <string name="message_videos_added">Videos added to playlist</string>
    <string name="message_operation_failed">Operation failed</string>

    <!-- Error messages for AboutPage -->
    <string name="error_no_browser">No browser app found</string>
    <string name="error_open_link">Failed to open link</string>

    <!-- Permission Screen -->
    <string name="permission_screen_title">Permissions Required</string>
    <string name="permission_screen_description">YtAlarm requires the following permissions to function properly as an alarm app.</string>
    <string name="permission_screen_continue">Continue</string>
    <string name="permission_screen_required">Please grant all permissions to continue.</string>
    <string name="permission_screen_grant">Grant</string>
    <string name="permission_exact_alarm_title">Schedule Exact Alarms</string>
    <string name="permission_exact_alarm_description">Required to trigger alarms at the exact time you set.</string>
    <string name="permission_full_screen_title">Full Screen Intent</string>
    <string name="permission_full_screen_description">Required to display alarm on lock screen.</string>
    <string name="permission_overlay_title">Display Over Other Apps</string>
    <string name="permission_overlay_description">Required to show alarm even when using other apps.</string>
    <string name="permission_notification_title">Notifications</string>
    <string name="permission_notification_description">Required to display alarm notifications.</string>

    <!-- Settings Screen -->
    <string name="menu_title_settings">Settings</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="settings_ytdlp_section">yt-dlp</string>
    <string name="settings_ytdlp_update_channel">Update Channel</string>
    <string name="settings_ytdlp_channel_stable">Stable</string>
    <string name="settings_ytdlp_channel_nightly">Nightly</string>
    <string name="settings_ytdlp_update_now">Update Now</string>
    <string name="settings_ytdlp_update_now_description">Update yt-dlp to the latest version</string>
    <string name="settings_ytdlp_updating">Updating…</string>
    <string name="dialog_update_channel_title">Update Channel</string>
    <string-array name="dialog_update_channel_choice">
        <item>Stable</item>
        <item>Nightly</item>
    </string-array>
    <string name="menu_playlist_option_download_all">Download All Videos</string>
    <string name="settings_download_section">Download</string>
    <string name="settings_download_wifi_only">Wi-Fi Only</string>
    <string name="settings_download_wifi_only_description">Download only when connected to Wi-Fi</string>
    <string name="settings_download_storage_limit">Storage Limit</string>
    <string name="settings_download_total_size">Total Download Size</string>
    <string name="settings_download_delete_all">Delete All Downloads</string>
    <string name="settings_download_delete_all_description">Remove all downloaded video files</string>
    <string name="notification_ytdlp_update_channel_description" translatable="false">yt-dlp update notification channel</string>
    <string name="notification_ytdlp_updating_title">Updating yt-dlp…</string>
    <string name="notification_ytdlp_update_failed_title">yt-dlp Update Failed</string>
    <string name="notification_ytdlp_update_failed_description">Could not update yt-dlp. Check your network connection.</string>
</resources>