...
            horizontalArrangement = Arrangement.spacedBy(12.dp),
            verticalAlignment = Alignment.CenterVertically
        ) {
            Box {
                AsyncImage(
                    model = video.thumbnailUrl.ifEmpty { R.drawable.ic_no_image },
                    contentDescription = "Video thumbnail",
                    modifier = Modifier.size(width = 132.dp, height = 64.dp),
                    contentScale = ContentScale.Crop
                )
                if (isFailed) {
                    Icon(
                        imageVector = Icons.Default.Error,
...
